--- a/app/src/main/res/layout/card_layout_menu.xml
+++ b/app/src/main/res/layout/card_layout_menu.xml
@@ -32,7 +32,7 @@
             android:id="@+id/textViewHargaMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="100.000"
+            android:text=""
             android:textAlignment="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"/>
